Fixed mis-aligning of contact me button when switching from web to mobile view, vice-versa

--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,12 @@
   display: flex;
 }
 
+.navbar-section .rightSide ul li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .navbar-section .rightSide button {
   display: none
 }
